--- a/reactExercises/6proj/route-practice/package.json
+++ b/reactExercises/6proj/route-practice/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.8"
+    "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
