--- a/reactExercises/MERN/yak-yik/package.json
+++ b/reactExercises/MERN/yak-yik/package.json
@@ -15,7 +15,8 @@
     "morgan": "~1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "superagent": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
