--- a/snuze/package.json
+++ b/snuze/package.json
@@ -22,6 +22,7 @@
     "expo": "^26.0.0",
     "react": "16.3.0",
     "react-native": "~0.54.1",
+    "react-native-modal-datetime-picker": "^5.1.0",
     "react-native-simple-picker": "^2.0.0"
   }
 }
